--- a/hassio.cfg
+++ b/hassio.cfg
@@ -149,7 +149,7 @@ d-i partman-auto/expert_recipe string \
                       vg_name{ vg00 } \
                       lv_name{ swap } \
               . \
-              131072 131072 -1 \
+              131072 131072 -1 xfs \
                       $lvmok{ } \
                       lv_name{ root } \
                       in_vg{ vg00 } \
@@ -218,7 +218,7 @@ d-i apt-setup/contrib boolean true
 
 ### Package selection
 tasksel tasksel/first multiselect minimal
-d-i pkgsel/include string openssh-server unzip mc ntpdate apt-transport-https curl wget python avahi-daemon git telnet traceroute vim usbutils unzip chrony jq udisks2 libglib2.0-bin network-manager dbus rclone fuse
+d-i pkgsel/include string openssh-server man-db unzip mc ntpdate apt-transport-https curl wget python avahi-daemon git telnet traceroute vim usbutils unzip chrony jq udisks2 libglib2.0-bin network-manager dbus rclone fuse
 d-i pkgsel/upgrade select full-upgrade
 
 # Some versions of the installer can report back on what software you have
